Squash IE bugs

--- a/src/organisms/cards/RadioCard/radio_card.module.scss
+++ b/src/organisms/cards/RadioCard/radio_card.module.scss
@@ -33,9 +33,8 @@ $border-style: 1px solid color('neutral-5');
   opacity: .4;
 }
 
-
 .content {
-  flex: 1 0;
+  flex: 1 0 auto;
   display: flex;
   flex-direction: column;
   width: 100%;
